tests/snapshots/integration__integration_tests__remove__remove_foreground_unmerged.snap
---
source: tests/integration_tests/remove.rs
assertion_line: 28
info:
  program: wt
  args:
    - remove
    - "--no-background"
    - feature-unmerged-fg
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRemoving [1mfeature-unmerged-fg[22m worktree...[39m
✅ [32mRemoved [1mfeature-unmerged-fg[22m worktree; retaining unmerged branch[39m
💡 [2m[90mwt remove -D[39m deletes unmerged branches[22m
