tests/snapshots/integration__integration_tests__remove__remove_multiple_worktrees.snap
---
source: tests/integration_tests/remove.rs
info:
  program: wt
  args:
    - remove
    - feature-a
    - feature-b
    - feature-c
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpYrctGH/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mRemoving worktree for [1m[36mfeature-a[0m...[0m
✅ [32mRemoved worktree for [1m[32mfeature-a[0m[0m
🔄 [36mRemoving worktree for [1m[36mfeature-b[0m...[0m
✅ [32mRemoved worktree for [1m[32mfeature-b[0m[0m
🔄 [36mRemoving worktree for [1m[36mfeature-c[0m...[0m
✅ [32mRemoved worktree for [1m[32mfeature-c[0m[0m

----- stderr -----
